<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/logo_name"
                android:textColor="@color/textColor"
                android:textSize="24dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/main_relative_map_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@color/card1"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/map_icon" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Map"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/main_relative_contact_btn"
                    android:layout_width="64dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@color/card2"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_email" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Liên hệ"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/main_relative_tintuc_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@color/card3"
                    android:elevation="8dp">

                    <ImageView

                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_phache" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tin tức"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/main_show_relative"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@color/card4"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_infor" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Xem thêm"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/banner_backgound_light">

            <LinearLayout
                android:id="@+id/products_new_background"
                android:layout_width="170dp"
                android:layout_height="280dp"
                android:layout_margin="10dp"
                android:background="@color/banner_backgound"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="59dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/products_new"
                    android:textAllCaps="true"
                    android:textColor="@color/textColor"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/products_new_desciption" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_new_recycler"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_margin="2dp"
                android:layout_toRightOf="@id/products_new_background"
                android:background="@color/home_background" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/products_discount"
                    android:textAllCaps="true"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/view_all" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_discount_recycler"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sản phẩm bán chạy"
                    android:textAllCaps="true"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/view_all" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_spbanchay_recycler"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>